Bugfix: Nav header not appearing on mobile (#461)

--- a/packages/reference/client/scss/60_components/_c-nav.scss
+++ b/packages/reference/client/scss/60_components/_c-nav.scss
@@ -77,7 +77,7 @@
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      position: fixed;
+      position: absolute;
       width: 100%;
       top: 0;
       background-color: white;
